--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,14 +10,10 @@
     flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
-    border-bottom-right-radius: 15px;
     padding-top: 20px;
     padding-bottom: 20px;
     list-style: none;
     background-color: #101113;
-    border-bottom-left-radius: 15px;
-    border: 5px solid;
-    border-bottom-color: darkred;
     border-top-color:  #101113;
     
 
@@ -37,7 +33,7 @@
     border-top-left-radius: none;
     border-top-right-radius: none;
     border: 2px ;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Krona One', sans-serif !important;
     transition: color 1s cubic-bezier(0.98, 1.6, 1, 1), border-color 0.5s cubic-bezier(0.06, 0.81, 0, 0.24);
     
 }
@@ -71,33 +67,38 @@
     
 }
 
+.frase-inicio{
+
+    position: absolute;
+    top: 216px;
+
+
+}
+
 .frase-inicio h1 {
 
     text-align: center;
-    position: absolute;
+   
     top: 230px;
     bottom: 0;
     color: white;
-    font-family: 'Amiri', serif;
+    font-family: 'Krona One', sans-serif !important;
     font-style: italic;
+    font-size: 35px;
 
 }
 /*#3065cfcc*/
 
 
-.frase-inicio h2 {
+.frase-inicio p {
 
    
-    position: absolute;
-    position: absolute;
     bottom: 0px;
     color: white;
-    margin-top: 10px;
-    top: 359px;
-    padding-top: 10px;
     right: 20px;
-    font-family: 'Amiri', serif;
+    font-family: 'Krona One', sans-serif !important;
     font-style: italic;
+    text-align: end;
 }
 
 @media (min-width: 900px){
@@ -113,9 +114,10 @@
         "header header"
         "main main"
         "titulo titulo"
-        "widget-1 widget-2"
+        "widget-1 widget-3"
         "footer footer";
         margin: 0px auto;
+        
         
     }
 
@@ -139,22 +141,28 @@
     {
 
         min-height: 800px;
-        background-color: #101113;
+        background-color: #161B2E;
         grid-area: main / main / main / main;
         min-height: 500px;
 
     }
 
-  
-
-    .tituloWidgets-inicio
-    {
+    #alert-inicio{
         grid-area: titulo;
-        display: flex;
-        justify-content: space-evenly;
-        background-color: black;
+        text-align: center;
     }
 
+    #card1{
+        grid-area: widget-1;
+        margin-left: 100px;
+        margin-right: 30px;
+    }
+
+    #card2{
+        grid-area: widget-3;
+        margin-right: 100px;
+        margin-left: 30px;
+    }
 
     .widget1-inicio 
     {
@@ -165,6 +173,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    
     }
 
     .widget2-inicio 
@@ -185,7 +194,79 @@
 
     }
 
+}
 
+@media (max-width: 899px)
+{
+    
+/*-------------------------------------INICIO.HTML--------------------------------------*/
+            .container-inicio
+            {
+                background-color: #101113 ;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(6, auto);
+                grid-template-areas:
+                "header header"
+                "main main"
+                "titulo titulo"
+                "widget-1 widget-1"
+                "widget-3 widget-3"
+                "footer footer";
+                margin: 0px auto;
+                
+            }
+        
+           
+        
+            .header-inicio
+            {
+           
+                grid-area: header / header / header / header;
+                
+           
+            }
+
+            .menu{
+                flex-wrap: wrap;
+            }
+
+            .main-inicio
+            {
+        
+               
+                background-color: #161B2E;
+                grid-area: main / main / main / main;
+                min-height: 500px;
+        
+            }
+            
+            .frase-inicio{
+
+                top: 250px;
+            }
+        
+            #alert-inicio{
+                grid-area: titulo;
+                text-align: center;
+            }
+        
+            #card1{
+                grid-area: widget-1;
+                margin: 10px;
+            }
+        
+            #card2{
+                grid-area: widget-3;
+                
+            }
+            
+            .footer{
+        
+                grid-area: footer;
+        
+            }
+}
 
 
 
@@ -240,78 +321,7 @@
 
 }
 
-@media (max-width: 899px)
-{
 
-/*-------------------------------------INICIO.HTML--------------------------------------*/
-        .container-inicio
-        {
-            background-color: #101113 ;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(6, auto);
-            grid-template-areas:
-            "header header"
-            "main main"
-            "widget-1 widget-1"
-            "widget-2 widget-2"
-            "footer footer";
-            margin: 0px auto;
-            
-        }
-    
-        .imgMain-inicio{
-    
-            width: 100%;
-            height: 700px;
-    
-        }
-    
-        .header-inicio
-        {
-       
-            grid-area: header / header / header / header;
-            flex-wrap: wrap;
-       
-        }
-        
-        .main-inicio
-        {
-    
-            min-height: 800px;
-            background-color: #101113;
-            grid-area: main / main / main / main;
-            min-height: 500px;
-    
-        }
-    
-    
-        .widget1-inicio {
-            grid-area: widget-1 / widget-1 / widget-1 / widget-1;
-            min-height: 300px;
-            background-color: #101113;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    
-        .widget2-inicio {
-            grid-area: widget-2 / widget-2 / widget-2 / widget-2;
-            min-height: 300px;
-            background-color: #101113;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        
-        .footer{
-    
-            grid-area: footer;
-    
-        }
-}
 /*----------------------------------------------- welcome.html--------------------------------------- **/
 
 
